# rust-motd

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPING.md  LICENSE  PKGBUILD.template  README.md  default_config.toml  en.utf-8.add  en.utf-8.add.spl  example_config.kdl  example_config.toml  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  release-on-version-bump.yml
docs/: cert.pem  config_migration.md  example_config.kdl  example_config.toml  generate_example.sh
src/: command.rs  component.rs  config.rs  constants.rs  main.rs  tests.rs
src/components/: banner.rs  cg_stats.rs  command.rs  docker.rs  docker_compose.rs  fail_2_ban.rs  filesystem.rs  last_login.rs  last_run.rs  loadavg.rs  memory.rs  mod.rs  service_status.rs  ssl_certs.rs  ssl_certs_tests.rs  uptime.rs  weather.rs
src/config/: get_config.rs  global_config.rs  kdl_config.rs  mod.rs  toml_config.rs
