[package]
name = "rust-motd"
version = "1.0.1"
authors = ["Marcel Robitaille <mail@marcelrobitaille.me>", "Aaron Gross <aaron.gross.code@gmail.com>"]
edition = "2021"
description = "Beautiful, useful MOTD generation with zero runtime dependencies"
homepage = "https://github.com/rust-motd/rust-motd"
repository = "https://github.com/rust-motd/rust-motd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.7"
bytesize = "1.0.1"
termion = "1.5.6"
serde = {version = "1.0", features = ["derive"] }
serde_plain = "1.0.0"
toml = "0.5"
humantime = "2.1.0"
regex = "1.1.0"
chrono = "0.4.22"
time = "0.3.14"
itertools = "0.10"
thiserror = "1.0.24"
lazy_static = "1.4.0"
ureq = "2.2.0"
last-rs = "0.2.1"
openssl = { version = "0.10.41", features = ["vendored"] }
docker-api = { version = "0.12.0" }
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.57"
clap ={ version = "4.2.7", features = ["unstable-doc"]}
indexmap = { version = "2.7.0", features = ["serde"] }

[package.metadata.bundle]
