[package]
name = "rust-motd"
version = "1.1.1"
authors = ["Marcel Robitaille <mail@marcelrobitaille.me>", "Aaron Gross <aaron.gross.code@gmail.com>"]
edition = "2021"
description = "Beautiful, useful MOTD generation with zero runtime dependencies"
homepage = "https://github.com/rust-motd/rust-motd"
repository = "https://github.com/rust-motd/rust-motd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.4"
bytesize = "2.0.1"
termion = "4.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0.2"
toml = "0.8"
humantime = "2.2.0"
regex = "1.11.0"
chrono = "0.4.41"
time = "0.3.41"
itertools = "0.14.0"
thiserror = "2.0.12"
lazy_static = "1.5.0"
ureq = "3.0.12"
last-rs = "0.2.2"
openssl = { version = "0.10.73", features = ["vendored"] }
docker-api = { version = "0.14.0" }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["unstable-doc"]}
indexmap = { version = "2.9.0", features = ["serde"] }
interpolator = "0.5.0"
libc = "0.2.174"

[package.metadata.bundle]
