[package]
name = "rust-motd"
version = "1.1.1"
authors = ["Marcel Robitaille <mail@marcelrobitaille.me>", "Aaron Gross <aaron.gross.code@gmail.com>"]
edition = "2021"
description = "Beautiful, useful MOTD generation with zero runtime dependencies"
homepage = "https://github.com/rust-motd/rust-motd"
repository = "https://github.com/rust-motd/rust-motd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
bytesize = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["unstable-doc"]}
docker-api = { version = "0.14.0" }
humantime = "2.2.0"
indexmap = { version = "2.9.0", features = ["serde"] }
interpolator = "0.5.0"
itertools = "0.14.0"
knus = "3.3.1"
last-rs = "0.2.2"
lazy_static = "1.5.0"
libc = "0.2.174"
miette = { version="7.2.0", features=["fancy"] }
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0.2"
systemstat = "0.2.4"
termion = "4.0.5"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8"
ureq = "3.0.12"
unicode-ellipsis = "0.3.0"
shellexpand = "3.1.1"

[package.metadata.bundle]
